# LinkVault

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE..md  CLAUDE.backup-2026-04-28.md  PROJECT_MEMORY.md  README.de.md  README.md  pyproject.toml
ct/: linkvault.sh
deploy/: linkvault.env.example  linkvault.service
docs/: ARCHITECTURE.md  BACKUP_RESTORE.md  BROWSER_BOOKMARK_UX_PATTERNS.md  BROWSER_IMPORT_RESEARCH.md  COMPANION_EXTENSION.md  COMPANION_EXTENSION_UPDATE.md  DEBIAN_LXC_TEST.md  DEDUP_SORTING_CATEGORIZATION.md  DEMO_UX_ANALYSIS.md  DEVELOPMENT_WINDOWS.md  DUPLICATE_PREFLIGHT.md  FLOCCUS_SYNC_RESEARCH.md  HELPER.md  INSTALLATION_REQUIREMENTS.md  LAYOUT_DISPLAY_UX_PATTERNS.md  PRODUCT_SPEC.md  PROXMOX_COMMUNITY_SCRIPT.md  README.de.md  README.md  RESEARCH_IMPACT.md  ROADMAP.en.backup-2026-04-28.md  ROADMAP.en.md  ROADMAP.md  ROADMAPE.backup-2026-04-28.md  ROADMAP_SOLUTIONS.md  UPDATE.md  UX_RESEARCH_IMPACT.md  linkvault_statusanalyse.md
extensions/linkvault-companion/: README.md  manifest.json  options.html  options.js  popup.html  popup.js  shared.js  (+1 more)
install/: linkvault-install.sh
proxmox/: linkvault-backup-restore-test.sh  linkvault-lxc-test.sh  linkvault-update-test.sh
scripts/: backup-linkvault.sh  check-requirements.sh  install-debian.sh  linkvault-helper.sh  restore-linkvault.sh  update-linkvault.sh
selfhosted-bookmark-research/: FULL_REPORT.md  README.md  metadata.json  sources_urls.txt
tests/: test_auth.py  test_config.py  test_docs.py  test_extension_assets.py  test_metadata.py  test_server_html.py  test_store.py  test_url_tools.py
(+29 files in other folders)
