[project]
name = "linkvault"
version = "0.1.0"
description = "Self-hosted bookmark, favorites and link management platform"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
linkvault = "linkvault.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
